# sms

./: folder_structure.txt  main.py  pyproject.toml  todo.md
sms/app/: .env  __init__.py  data_generator.py  db_config.py  gsd.py  payment.py
sms/app/api/: __init__.py  admin_api.py  auth_api.py  student_api.py  teacher_api.py
sms/app/libraries/: __init__.py  backend_functions.py
sms/app/models/: __init__.py  admin_model.py  base_model.py  student_model.py  teacher_model.py
sms/app/routes/: __init__.py  admin_routes.py  auth_routes.py  student_routes.py  teacher_routes.py
sms/app/static/css/: tailwind-custom.css
sms/app/static/js/: intelleva-charts.js
sms/app/static/js/auth/: ai.js  choose_school.js  login.js  nav.js  navv.js
sms/app/static/js/student/: attendance.js  index.js  performance.js
sms/app/templates/: ai.html  base.html  nav.html
sms/app/templates/admin/: class_management.html  communication.html  fee_management.html  finacial_management.html  index.html  profile.html  school_management.html  student_management.html  teacher_management.html
sms/app/templates/auth/: choose_school.html  homepage.html  login.html  register.html
sms/app/templates/components/: header.html  sidebar.html  ui_components.html
sms/app/templates/student/: ai.html  attendance.html  class.html  class_info.html  fee.html  fees.html  index.html  performance.html  profile.html  progress.html
sms/app/templates/teacher/: ai.html  attendance.html  class.html  fee.html  index.html  performance.html  profile.html
